/*
 * Copyright (C) 2022 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package layout_inspector;

message ForegroundProcess {
  string pid = 1;
  string process_name = 2;
}

message TrackingForegroundProcessSupported {
  enum SupportType {
    UNKNOWN = 0;
    SUPPORTED = 1;
    NOT_SUPPORTED = 2;
  }

  enum ReasonNotSupported {
    UNKNOWN_REASON = 0;
    DUMPSYS_NOT_FOUND = 1;
    GREP_NOT_FOUND = 2;
    DUMPSYS_NO_TOP_ACTIVITY_NO_SLEEPING_ACTIVITIES = 3;
    DUMPSYS_NO_TOP_ACTIVITY_BUT_HAS_AWAKE_ACTIVITIES = 4;
  }

  SupportType support_type = 1;
  // set only if support_type is NOT_SUPPORTED
  // additional information for why auto connect is not supported
  ReasonNotSupported reason_not_supported = 2;
}